修改了登入有错的问题，

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -12,3 +12,10 @@ log4j.logger.com.foo=WARN
 log4j.logger.org.springframework=INFO
 log4j.logger.org.springframework.transaction=DEBUG
 log4j.logger.com.opensymphony.xwork2=DEBUG
+log4j.logger.freemarker.beans=INFO
+log4j.logger.com.opensymphony.xwork2.config.providers=INFO
+log4j.logger.com.opensymphony.xwork2.conversion.impl=INFO
+log4j.logger.freemarker.cache=INFO
+log4j.logger.com.opensymphony.xwork2.config.ConfigurationManager=INFO
+log4j.logger.org.apache.struts2.config.BeanSelectionProvider=INFO
+log4j.logger.com.opensymphony.xwork2.ognl.accessor=INFO
