--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Nov 30 17:05:58 CST 2010
+#Tue Nov 30 23:21:00 CST 2010
 eclipse.preferences.version=1
+encoding//WebContent/jsp/project/project.jsp=UTF-8
 encoding/<project>=UTF-8
