--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Tue Nov 30 23:21:00 CST 2010
+#Thu Dec 02 18:36:56 CST 2010
 eclipse.preferences.version=1
 encoding//WebContent/jsp/project/project.jsp=UTF-8
+encoding//WebContent/jsp/snip.jsp=UTF-8
 encoding/<project>=UTF-8
