纵向项目管理

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
-#Thu Dec 02 18:36:56 CST 2010
+#Sat Dec 04 16:44:55 CST 2010
 eclipse.preferences.version=1
 encoding//WebContent/jsp/project/project.jsp=UTF-8
 encoding//WebContent/jsp/snip.jsp=UTF-8
+encoding//WebContent/styles/c_about.css=UTF-8
+encoding//WebContent/styles/main.css=UTF-8
 encoding/<project>=UTF-8
