--- a/conf/jdbc.properties
+++ b/conf/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
+jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.username=rpm
 jdbc.password=oracle
